SERVER-43103 fix divison by zero when moving extremely small chunks